modified the structure of the project

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-PORT = 
-MONGODB_URI =
-NODE_ENV = 
+PORT = 5000
+MONGODB_URI = "mongodb+srv://saichidvi:saichidvi@cluster0.uynfptz.mongodb.net/?retryWrites=true&w=majority"
+NODE_ENV = 'production'
 
-JWT_SECRET = 
-ORIGIN =
+JWT_SECRET = "saichidvi"
+ORIGIN = 
 
 FAST2SMS =
 ADMIN_PHONE = 
